Fix missing lines/glossary bug on Safari. Issue #2

--- a/src/components/search/search.css
+++ b/src/components/search/search.css
@@ -58,7 +58,6 @@
   -webkit-box-shadow: var(--sqBorder);
   -moz-box-shadow: var(--sqBorder);
   display: flex;
-  padding-right: calc(1.75 * var(--sqWidth));
 }
 
 .glossary__item {
@@ -81,13 +80,13 @@
 
 .glossary:after {
   content: "";
-  position: absolute;
+  position: sticky;
   z-index: 1;
   right: 0;
   pointer-events: none;
   height: calc(0.5 * var(--sqWidth) - 2px);
   background: linear-gradient(to right, #fff0, var(--white) 90%);
-  width: 20%;
+  width: 10%;
 }
 
 .glossary__item:hover {
